compiler/testData/multiplatform/regressions/incompatibleClassScopesWithImplTypeAlias/output.txt
-- Common --
Exit code: OK
Output:

-- JVM --
Exit code: COMPILATION_ERROR
Output:
compiler/testData/multiplatform/regressions/incompatibleClassScopesWithImplTypeAlias/jvm.kt:3:18: error: 'actual typealias Writer = Writer' has no corresponding members for expected class members:

    expect constructor(): Writer

    The following declaration is incompatible because visibility is different:
        constructor(): Writer
    The following declaration is incompatible because number of value parameters is different:
        constructor(p0: Any!): Writer

actual typealias Writer = java.io.Writer
                 ^
